--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -3,7 +3,7 @@ resources:
 - name: attendee-service-source
   type: git
   source:
-    uri: https://github.com/mbajic/pcf-attendee-service-code
+    uri: git@github.com:mbajic/pcf-attendee-service-code.git
     branch: master
 
 - name: deploy-attendee-service
