--- a/ci/tasks/current-app-get-info.yml
+++ b/ci/tasks/current-app-get-info.yml
@@ -4,17 +4,14 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: ubuntu
+    repository: pivotalservices/docker-concourse-cf-tools
     tag: "latest"
-
-params:
-  app_suffix:
-  app_domain:
 
 inputs:
 - name: attendee-service-source
+
+outputs:
 - name: current-app-info
 
 run:
-  path: attendee-service-source/ci/tasks/smoke-test.sh
-
+  path: attendee-service-source/ci/tasks/current-app-get-info.sh
