--- a/ci/tasks/current-app-get-info.yml
+++ b/ci/tasks/current-app-get-info.yml
@@ -7,6 +7,10 @@ image_resource:
     repository: pivotalservices/docker-concourse-cf-tools
     tag: "latest"
 
+params:
+  api:
+  username:
+
 inputs:
 - name: attendee-service-source
 
